# projects_incubator

./: README.md  docker-compose.yaml
.docker/: Dockerfile
autonomous_coilgun/: README.md
autonomous_coilgun/STASH/: solenoid_plunge.md
computer_vision_navigation/: README.md
docker/: Dockerfile  entrypoint.sh  entrypoint_ros2.sh
flight_telemetry_analytics/: README.md
kalman_filter/: README.md
led_blink/: CMakeLists.txt  Dockerfile  README.md  blink_4.c  build.bash  setup.bash
model_predictive_control/: CMakeLists.txt  README.md  test.bash
model_predictive_control/docs/: iterative_learning_mpc.md  linear_mpc.md  linear_time_varying_mpc.md  mpc.md
model_predictive_control/linear_mpc/: CMakeLists.txt
model_predictive_control/linear_mpc/include/: linear_mpc.hpp
model_predictive_control/linear_mpc/src/: linear_mpc.cpp
model_predictive_control/model_prediction_control/linear_mpc/: CMakeLists.txt
model_predictive_control/model_prediction_control/linear_mpc/include/: linear_mpc.hpp
model_predictive_control/model_prediction_control/linear_mpc/src/: linear_mpc.cpp
model_predictive_control/model_prediction_control/linear_mpc/tests/: test_linear_mpc.cpp
model_predictive_control/model_prediction_control/linear_time_varying_mpc/: CMakeLists.txt
model_predictive_control/model_prediction_control/linear_time_varying_mpc/include/: linear_time_varying_mpc.hpp
model_predictive_control/model_prediction_control/linear_time_varying_mpc/src/: linear_time_varying_mpc.cpp
model_predictive_control/model_prediction_control/utils/include/: custom_test_macros.hpp  data_structure.hpp  jacobian.hpp
model_predictive_control/model_prediction_control/utils/tests/: test_data_structure.cpp
model_predictive_control/utils/include/: data_structure.hpp  discretization.hpp  solver.hpp
navigation_algorithm/: README.md
network_monitoring/: README.md
network_monitoring/config/: config.yaml
network_monitoring/network_monitoring/: go.mod  go.sum  main.py  set_monitor.bash
network_monitoring/network_monitoring/config/: config.yaml
network_monitoring/src/: network_scanner.py
networking_tool/: .gitignore
networking_tool/network_monitoring/: README.md  network_scanner.go  network_scanner.py  presence.py
path_planning/: .gitignore  Dockerfile  README.md
path_planning/doc/: README.md  graph_based_algorithms.md  sampling_based_algorithms.md
path_planning/path_planning/: CMakeLists.txt
path_planning/path_planning/graph_based_algo/a_star/: CMakeLists.txt  main.cpp
path_planning/path_planning/graph_based_algo/a_star/include/: a_star.hpp
path_planning/path_planning/graph_based_algo/a_star/src/: a_star.cpp
path_planning/path_planning/graph_based_algo/bfs/: CMakeLists.txt  main.cpp
path_planning/path_planning/graph_based_algo/bfs/include/: bfs.hpp
path_planning/path_planning/graph_based_algo/bfs/src/: bfs.cpp
path_planning/path_planning/graph_based_algo/dijkstra/: CMakeLists.txt  main.cpp
path_planning/path_planning/graph_based_algo/dijkstra/include/: dijkstra.hpp
path_planning/path_planning/graph_based_algo/dijkstra/src/: dijkstra.cpp
path_planning/path_planning/sampling_based_algo/: CMakeLists.txt
path_planning/path_planning/utils/include/: graph.hpp
path_planning/path_planning/utils/include/STASH/: graph.hpp  temp.hpp  visualization.cpp  visualization.hpp
path_planning/path_planning/utils/src/: visualization copy.cpp
real_time_object_tracking/: README.md  requirements.txt
real_time_object_tracking/demo/: demo.py
rfid_nfc_item_tracking/: README.md
robotics_cross_compilation/: README.md
rpi_motor_control_protocol/: .gitignore  CMakeLists.txt  README.md  main.c  package.xml
rpi_motor_control_protocol/STASH/dshot/: dshot.c  dshot.pio  dshot_16bit.c  dshot_16bit.h  dshot_dma.c  dshot_dma.h  dshot_pio.c  dshot_pio.h
rpi_motor_control_protocol/STASH/oneshot/: CMakeLists_1.txt  config_0.h  oneshot125_0.c  oneshot125_1.c
rpi_motor_control_protocol/STASH/pwm/: motor_control.c
rpi_motor_control_protocol/blink/: CMakeLists.txt  blink.c  blink_priority.c
rpi_motor_control_protocol/docs/: projects.md
rpi_motor_control_protocol/dshot/: CMakeLists.txt
rpi_motor_control_protocol/include/: hw_config.h
rpi_motor_control_protocol/oneshot/: CMakeLists.txt  config.h
rpi_motor_control_protocol/oneshot/include/: data_structures.h  oneshot125.h
rpi_motor_control_protocol/oneshot/src/: oneshot125.c
rpi_motor_control_protocol/pid/: CMakeLists.txt  pid.c  pid.h
rpi_motor_control_protocol/pwm/: CMakeLists.txt  config.h  pwm.c  pwm_open.c
rpi_motor_control_protocol/utils/: performance.h
sensor_fusion_ai/: README.md
state_estimation/: README.md
state_estimation/state_estimation/: CMakeLists.txt  build.bash
state_estimation/state_estimation/kalman_filter/: CMakeLists.txt  README.md  main.cpp
state_estimation/state_estimation/kalman_filter/STASH/: CMakeLists.txt  README.md  package.xml
state_estimation/state_estimation/kalman_filter/STASH/STASH/: CMakeLists.txt
state_estimation/state_estimation/kalman_filter/STASH/STASH/include/: unscent_kalman_filter.hpp
state_estimation/state_estimation/kalman_filter/STASH/STASH/src/: unscent_kalman_filter.cpp
state_estimation/state_estimation/kalman_filter/STASH/STASH/tests/: TEMP.cpp
state_estimation/state_estimation/kalman_filter/STASH/include/: extended_kalman_filter.hpp  kalman_filter.hpp
state_estimation/state_estimation/kalman_filter/STASH/pictures/: kalman_filter.excalidraw
state_estimation/state_estimation/kalman_filter/STASH/src/: extended_kalman_filter.cpp
state_estimation/state_estimation/kalman_filter/STASH/tests/: test_extended_kalman_filter.cpp  test_linear_kalman_filter.cpp  test_system_models.cpp
state_estimation/state_estimation/kalman_filter/doc/: README.md
state_estimation/state_estimation/kalman_filter/include/: extended_kalman_filter.hpp  linear_kalman_filter.hpp  unscented_kalman_filter.hpp
state_estimation/state_estimation/kalman_filter/src/: extended_kalman_filter.cpp  linear_kalman_filter.cpp  unscented_kalman_filter.cpp
ugv_fleet_management/: README.md
(+4 files in other folders)
