<package format="3">
  <name>freertos_pico2</name>
  <version>0.1.0</version>
  <description>Actuator control protocol implementations.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclc</depend>
  <depend>std_msgs</depend>
  <depend>rmw_microxrcedds</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>